--- a/M2U3/archivocv.html
+++ b/M2U3/archivocv.html
@@ -14,22 +14,23 @@
                          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
                          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
                          crossorigin="anonymous" referrerpolicy="no-referrer" />
-                    <link rel="stylesheet" href="archivo2.css" />
+                    <link rel="stylesheet" href="archivocv.css" />
 
 </head>
 
 <body>
      <div class="contenedor">
 
+<div class="fija">
 
-          <h1> TOSI AGUSTIN</h1>
+     <h1> TOSI AGUSTIN</h1>
+</div>
 
           <div class="padre">
 
-               <div>
-                    <img src="https://scontent.faep9-2.fna.fbcdn.net/v/t1.6435-9/146528275_222962646192404_4730971276631295967_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=174925&_nc_ohc=l4t37Jb-AfwAX_SRh4G&_nc_ht=scontent.faep9-2.fna&oh=00_AT_Gg0BCP5SiHwnHqukRka2R-iRvfX_FgDhjTBPPAV5JLg&oe=62EB5C54"
-                         alt="paisaje" width="400" height=" 400 " />
-               </div>
+     
+                    <img src="https://mail.google.com/mail/u/0?ui=2&ik=72ea86d282&attid=0.1&permmsgid=msg-a:r9068359403611204463&th=1829e75e91168f61&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ8hyIw4MCDs6b5NxqGaFU5yWd9kna35dhj8QuF59IbvDM8uj_mCf4IP8CsGqJ627W4viX3MkVeo2g-kPyKCGpx7lAtb34m2tx6ksCj98j5Rpz921G0inmrtHKc&disp=emb&realattid=ii_l6twaifm0" alt="paisaje" width="300px" />
+        
 
                <div class="info">
 
